Corregidos enlaces hacía Bootstrap.

--- a/tablas/filas-resaltadas.html
+++ b/tablas/filas-resaltadas.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Filas Resaltadas con Bootstrap</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 <body>
 
@@ -71,7 +71,7 @@ Art&iacute;culo disponible en: <a href="http://lineadecodigo.com/bootstrap/resal
 
 </div>
 
-<script src="js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 </body>
 </html>
