Añadida la clase anidada checkbox

--- a/formularios/checkbox-en-linea.html
+++ b/formularios/checkbox-en-linea.html
@@ -12,6 +12,7 @@
 <h1>Checkbox en Línea</h1>
 
 <form>
+  <div class="checkbox">
 		<label class="checkbox-inline">
 		  <input type="checkbox" id="inlineCheckbox1" value="option1"> Avila
 		</label>
@@ -21,6 +22,7 @@
 		<label class="checkbox-inline">
 		  <input type="checkbox" id="inlineCheckbox3" value="option3"> Zamora
 		</label>
+  </div>
 </form>
 
 	
